--- a/metadata.yaml
+++ b/metadata.yaml
@@ -25,5 +25,6 @@ subjects:
 - !lcsh 'Western stories'
 - !lcc 'PS'
 - !lcsh 'Frontier and pioneer life -- West (U.S.) -- Fiction'
+- GITenberg
 title: Stepsons of Light
 url: http://www.gutenberg.org/ebooks/32704
